--- a/UIWPF/MainWindow.xaml
+++ b/UIWPF/MainWindow.xaml
@@ -1,5 +1,48 @@
-﻿<Window x:Class="UIWPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:UIWPF" mc:Ignorable="d" Title="MainWindow" Height="700" WindowStartupLocation="CenterScreen" Width="1000" Background="#444444">
+﻿<Window x:Class="UIWPF.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:UIWPF" mc:Ignorable="d" Title="MainWindow" Height="700" WindowStartupLocation="CenterScreen" Width="1000" Background="#444444" PreviewKeyDown="MainWindow_OnPreviewKeyDown">
   <Window.Resources>
+    <Style TargetType="DataGridColumnHeader">
+      <Setter Property="Background" Value="#000000"></Setter>
+    </Style>
+    <Style TargetType="Menu">
+      <Setter Property="Background" Value="#888888"></Setter>
+    </Style>
+    <Style TargetType="MenuItem">
+      <Setter Property="Background" Value="#888888"></Setter>
+    </Style>
+    <Style TargetType="TabControl">
+      <Setter Property="Background" Value="#333333"></Setter>
+    </Style>
+    <Style TargetType="TabItem">
+      <Setter Property="Background" Value="#888888"></Setter>
+    </Style>
+    <Style TargetType="DataGridRowHeader">
+      <Setter Property="Background" Value="#888888"></Setter>
+    </Style>
+    <Style x:Key='DarkGrid' TargetType="DataGrid">
+      <Setter Property="Foreground" Value="#FFFFFF" />
+      <Setter Property="Background" Value="#000000" />
+      <Setter Property="MinRowHeight" Value="30" />
+      <Setter Property="MinHeight" Value="250" />
+      <Setter Property="MaxHeight" Value="400" />
+      <Setter Property="ColumnHeaderStyle" Value="{StaticResource {x:Type DataGridColumnHeader}}"></Setter>
+    </Style>
+    <Style x:Key='darkRow' TargetType="{x:Type DataGridRow}">
+      <Setter Property="Foreground" Value="#FFFFFF" />
+      <Setter Property="Height" Value="35" />
+      <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+      <Setter Property="Template" Value="{DynamicResource DataGridRowControlTemplate1}" />
+      <Style.Triggers>
+        <Trigger Property="IsSelected" Value="True">
+          <Setter Property="Background" Value="#FF262626" />
+        </Trigger>
+        <Trigger Property="ItemsControl.AlternationIndex" Value="0">
+          <Setter Property="Background" Value="#FF383838" />
+        </Trigger>
+        <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+          <Setter Property="Background" Value="#FF333333" />
+        </Trigger>
+      </Style.Triggers>
+    </Style>
     <Style TargetType="Button" x:Key="DefaultButtonStyles">
       <Setter Property="Foreground" Value="Black" />
       <Setter Property="VerticalAlignment" Value="Bottom" />
@@ -46,11 +89,11 @@
         <RowDefinition MinHeight='50' />
         <RowDefinition MinHeight='50' Height="50"></RowDefinition>
       </Grid.RowDefinitions>
-<WrapPanel Grid.Row="1" Grid.Column="0">
-  <Button Content="Move + " Click="MoveWallClick"></Button>
-  <Button Content="Move - " Click="MoveWallClick2"></Button>
-  <Button Content="Split" Click="SplitWallClick"></Button>
-</WrapPanel>
+      <WrapPanel Grid.Row="1" Grid.Column="0">
+        <Button Content="Move + " Click="MoveWallClick"></Button>
+        <Button Content="Move - " Click="MoveWallClick2"></Button>
+        <Button Content="Split" Click="SplitWallClick"></Button>
+      </WrapPanel>
       <ScrollViewer Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
         <Canvas Name="testcanvas" RenderTransformOrigin="0.5,0.4">
           <Canvas.RenderTransform>
@@ -60,26 +103,18 @@
           </Canvas.RenderTransform>
         </Canvas>
       </ScrollViewer>
-      
-      <StackPanel Grid.Row="0" Grid.Column="1" Margin="10" Grid.RowSpan="2">
-        <StackPanel.Resources>
-          <Style TargetType="{x:Type DataGrid}">
-            <Setter Property="MinRowHeight" Value="30">
-            </Setter>
-            <Setter Property="MinHeight" Value="250" />
-            <Setter Property="MaxHeight" Value="400" />
-          </Style>
 
-        </StackPanel.Resources>
+      <StackPanel Grid.Row="0" Grid.Column="1" Margin="10" Grid.RowSpan="2">
+      
 
         <TabControl MinHeight="300">
-          
+
           <TabItem Name="PointGridItem" Header="Points">
-            <DataGrid Name="PointGrid" ItemsSource="{Binding Points, IsAsync=True, Mode=OneWay}" />
+            <DataGrid Name="PointGrid" ItemsSource="{Binding Points, IsAsync=True, Mode=OneWay}" RowStyle="{StaticResource darkRow}" Style="{StaticResource DarkGrid}" />
 
           </TabItem>
           <TabItem Name="RoomGridItem" Header="RoomGrid">
-            <DataGrid Name="RoomGrid" ItemsSource="{Binding Rooms, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False">
+            <DataGrid Name="RoomGrid" ItemsSource="{Binding Rooms, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" RowStyle="{StaticResource darkRow}" Style="{StaticResource DarkGrid}">
               <DataGrid.Columns>
                 <DataGridTemplateColumn Header="Name" Width="65">
                   <DataGridTemplateColumn.CellTemplate>
@@ -107,12 +142,12 @@
 
           </TabItem>
           <TabItem Name="LineGridItem" Header="LineGrid" Visibility="Visible" IsEnabled="True" IsSelected="True">
-            <DataGrid Name="LineGrid" ItemsSource="{Binding Lines, IsAsync=True, Mode=TwoWay, UpdateSourceTrigger=Explicit}" CurrentCellChanged="LineGrid_OnCurrentCellChanged" SelectionChanged="LineGrid_OnSelectionChanged" SelectionMode="Single" SelectionUnit="FullRow">
+            <DataGrid Name="LineGrid" ItemsSource="{Binding Lines, IsAsync=True, Mode=TwoWay, UpdateSourceTrigger=Explicit}" CurrentCellChanged="LineGrid_OnCurrentCellChanged" SelectionChanged="LineGrid_OnSelectionChanged" SelectionMode="Single" SelectionUnit="FullRow" RowStyle="{StaticResource darkRow}" Style="{StaticResource DarkGrid}">
             </DataGrid>
 
           </TabItem>
           <TabItem Name="RoomTypes" Header="RoomTypes">
-            <DataGrid Name="RoomTypesGrid" ItemsSource="{Binding roomtypes, IsAsync=True, Mode=OneWay}">
+            <DataGrid Name="RoomTypesGrid" ItemsSource="{Binding roomtypes, IsAsync=True, Mode=OneWay}" RowStyle="{StaticResource darkRow}" Style="{StaticResource DarkGrid}">
 
             </DataGrid>
 
@@ -122,7 +157,7 @@
         <TabControl MinHeight="300">
           <TabItem Header="costgrid">
 
-            <DataGrid x:Name="CostGrid" ItemsSource="{Binding SimulationCosts, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" VerticalScrollBarVisibility="Visible" MaxHeight='280' SelectionChanged='CostGrid_SelectionChanged' MouseDoubleClick="CostGrid_OnMouseDoubleClick" Height='200' Margin='0,0,0,0'>
+            <DataGrid x:Name="CostGrid" ItemsSource="{Binding SimulationCosts, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" VerticalScrollBarVisibility="Visible" MaxHeight='280' SelectionChanged='CostGrid_SelectionChanged' MouseDoubleClick="CostGrid_OnMouseDoubleClick" Height='200' Margin='0,0,0,0' RowStyle="{StaticResource darkRow}">
               <DataGrid.Columns>
                 <DataGridTemplateColumn Header="Index" Width="40">
                   <DataGridTemplateColumn.CellTemplate>
@@ -163,7 +198,7 @@
             </DataGrid>
           </TabItem>
           <TabItem Header="costgrid2">
-            <DataGrid x:Name="CostGrid2" ItemsSource="{Binding LineAndCostActualStep, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" VerticalScrollBarVisibility="Visible" MaxHeight='280' Height='200' Margin='0,0,0,0'>
+            <DataGrid x:Name="CostGrid2" ItemsSource="{Binding LineAndCostActualStep, IsAsync=True, Mode=OneWay}" AutoGenerateColumns="False" VerticalScrollBarVisibility="Visible" MaxHeight='280' Height='200' Margin='0,0,0,0' RowStyle="{StaticResource darkRow}">
               <DataGrid.Columns>
                 <DataGridTemplateColumn Header="Index" Width="40">
                   <DataGridTemplateColumn.CellTemplate>
